<resources>
    <string name="app_name">Fortune Homes</string>
    <string name="maps_api_key">AIzaSyBhs0UjUWPvR4iDPTdE1L3AjtSIhY90JIs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed">Feed</string>
    <string name="search">Search</string>
    <string name="saved">Saved</string>
    <string name="alerts">Alerts</string>
    <string name="more">More</string>
    <string name="welcome">Welcome to Fortune Homes</string>
    <string name="sign_in">Sign In</string>
    <string name="get_pre_qualified">Get Pre-Qualified</string>
    <string name="mortgage_calculators">Mortgage Calculators</string>
    <string name="mortgage_rates">Mortgage Rates</string>
    <string name="settings">Settings</string>
    <string name="help_center">Help Center</string>
    <string name="sign_in_text">Sign In to save your favorite homes</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="register_ac">No account? Register here</string>
    <string name="recommended_home">Recommended Homes</string>
    <string name="rec_alerts">Turn on alerts to see homes we think you\'ll love based on your saves and searches</string>
    <string name="get_recommendations">Get Recommendations</string>
    <string name="saved_homes_txt">Saved Homes</string>
    <string name="saved_text">You haven\'t saved any homes yet.Start searching for properties to add now</string>
    <string name="search_homes">Search Homes</string>
    <string name="register_new_user">REGISTER NEW USER</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="pref_file_key">pref_file_key</string>
    <string name="pref_is_user_login">isuserlogin</string>
    <string name="pref_name_of_user">nameofuser</string>
    <string name="remember_me">Remember Me</string>
    <string name="contact_for_estimate">Contact for estimate</string>
    <string name="housing_agents">Are you a housing agent?</string>
    <string name="enter_registration_number">Enter registration number</string>
    <string name="login_as_agent">Login as agent</string>
    <string name="not_an_agent">Not an agent? Back to login...</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="location_hint">Location in the country</string>
    <string name="reg_agent_text">Your registration number is:</string>
    <string name="upload_text_intro">Input the details of the house you want to register here. NOTE:All fields are mandatory</string>
    <string name="request1">I am interested in the home at </string>
    <string name="reset_password">Reset Password</string>
    <string name="verify_email">Verify Email</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new Password</string>
    <string name="view_agents">View Agents</string>
    <string name="feedback_txt">Please leave detailed feedback</string>
    <string name="help_text">We\'d love your feedback on Fortune homes. In case of any complaints, add them below</string>
</resources>