<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/feedsFragment"
        android:icon="@drawable/ic_feed"
        android:title="@string/feed" />

  <!--
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    -->
    <item
        android:id="@+id/savedFragment"
        android:icon="@drawable/ic_saved"
        android:title="@string/saved" />
    <item
        android:id="@+id/alertsFragment"
        android:icon="@drawable/ic_agent"
        android:title="@string/view_agents" />
    <item
        android:id="@+id/moreFragment"
        android:icon="@drawable/ic_more"
        android:title="@string/more" />
</menu>